--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #02021E;
   --foreground: #171717;
+  --color-1: #3827C7;
+  --color-2:#FDC448;
+  --color-3:#F5F5F7;
+  --color-4:#D7D7DF;
+  --white: #ffffff;
+
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #02021E;
+    --foreground: #ffffff;
   }
 }
 
@@ -20,8 +26,61 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+
+.btn {
+  @apply p-3 pl-5 pr-5 rounded-full cursor-pointer border border-transparent
+}
+
+.btn--primary {
+  @apply bg-[var(--color-1)] font-[400] duration-100
+}
+
+.btn--secondary {
+  @apply bg-[var(--color-2)] font-[400] duration-100 
+}
+
+.btn--secondary:hover {
+  @apply text-[var(--color-2)] bg-[var(--background)] border border-[var(--color-2)]
+}
+
+.btn--primary:hover{
+  @apply text-[var(--color-1)] bg-[white]
+}
+
+
+.btn--outline {
+  @apply outline
+}
+
+.page-header {
+width: 100%;
+}
+
+.page-header.is-sticky {
+  position: fixed;
+  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  /* backdrop-filter: blur(10px); */
+  background: var(--background);
+  animation: slideDown 0.35s ease-out;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.352);
+
+}
+
+.page-header.is-sticky img {
+  max-width: 80%;
+}
+
+.page-header.is-sticky button {
+  font-size: 14px;
+  padding: 7px 10px;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
   }
 }
