--- a/app/globals.css
+++ b/app/globals.css
@@ -103,3 +103,23 @@ width: 100%;
   border-radius: 10px !important;
   background-color: var(--color-1) !important;
 }
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.moving-text {
+  display: flex;
+}
+
+.moving-text h1 {
+  display: inline-block;
+  white-space: nowrap;
+  animation: marquee 20s linear infinite;
+}
